# 7-habits-agent-graph

./: .env.example  .gitignore  BEFORE_AFTER_COMPARISON.md  HABIT1_IMPROVEMENTS.md  README.md  env.example  improvement_demo.html  main.py  mcp_config.example.json  mcp_config.json  mcp_config_local.json  prompts.py  pyproject.toml  run_habit1.py  web_app.py
data/habits/: habit1_proactive_summary.md  habit4567_summary.md  habit4_summary.md  habit5_listen.md  habit6_synergize.md  habit7_sharpen.md
examples/: todo_app_demo.py
framework/: __init__.py  chat_app.py  chat_ui.py  github_utils.py  graph_manager.py  graph_registry.py  log_service.py  mcp_registry.py  prompt_manager.py
framework/decorators/: __init__.py  registered_graph.py
graphs/: __init__.py
graphs/01-linear/: 01_linear.py
graphs/02-tooluse/: 02_tooluse.py
graphs/03-react/: 03_react.py
graphs/04-deep-research/: 04_deep_research.py
graphs/05-subgraphs/: 05_subgraphs.py
graphs/06-github-info/: 06_github_info.py
graphs/07-vision-board/: 07_vision_board.py
graphs/08-todo-app/: 08_todo_app.py
graphs/habit1-proactive/: __init__.py  habit1_proactive.py
graphs/habit4/: __init__.py  habit4_win_win.py  habit4_winwin.py
graphs/habit4567_summary/: __init__.py  habit4567_summary.py
graphs/habit5/: __init__.py  habit5_listen.py  (+1 more)
templates/: index.html
tests/: test_habit1.py
tools/: deep_research.py  generate_quickchart.py  generate_vision_image.py  get_current_datetime.py  roll_dice.py  search_web.py  send_sms.py
workflows/: __init__.py  graph_registry.py  workflow_registry.py
(+11 files in other folders)
